order_chat/config/_inf/prod/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: legion-ms-order-chat-service
spec:
  type: ClusterIP
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: legion-ms-order-chat
